WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148624
[Freetype] FontCache::strengthOfFirstAlias leaks an FcPattern
https://bugs.webkit.org/show_bug.cgi?id=148624
Summary
[Freetype] FontCache::strengthOfFirstAlias leaks an FcPattern
Michael Catanzaro
Reported
2015-08-30 17:01:13 PDT
Spotted when playing with asan. Sorry.
Attachments
Patch
(2.98 KB, patch)
2015-08-30 17:15 PDT
,
Michael Catanzaro
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2015-08-30 17:15:51 PDT
Created
attachment 260256
[details]
Patch
Michael Catanzaro
Comment 2
2015-08-31 09:33:23 PDT
Committed
r189170
: <
http://trac.webkit.org/changeset/189170
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug