[Freetype] FontCache::strengthOfFirstAlias leaks an FcPattern https://bugs.webkit.org/show_bug.cgi?id=148624

Reviewed by Martin Robinson.

Using the normal RefPtr constructor causes the FcPattern to be reffed one extra time. Even
though the FcPattern is intentionally leaked to FcFontSetAdd down below, the FcPattern has
its own refcount and now it's screwed up. Just completely stop using RefPtr for these
FcPatterns, since the potential for confusion regarding leakRef combined with Fontconfig
refcounting far outweighs the benefit of using a smart pointer.

* platform/graphics/freetype/FontCacheFreeType.cpp:
(WebCore::strengthOfFirstAlias):

Canonical link: https://commits.webkit.org/166748@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189170 268f45cc-cd09-0410-ab3c-d52691b4dbfc